feat: acrescentado a section do formulário.

--- a/index-elaine.html
+++ b/index-elaine.html
@@ -11,6 +11,39 @@
 
 <body>
 
+    <div class="container-preto">
+        <section class="container-sm formulario">
+            <div class="row text-center align-items-center">
+                <div class="col-md-6">
+                    <img class="img-fluid" src="./assets/img/delivery-form.jpg"
+                        alt="Entregador de alimento entregando pedido.">
+                </div>
+                <div class="col">
+                    <div class="row text-start mt-3 form-texto">
+                        <h5 class="card-title">Quer ficar por dentro das novidades e de quebra ganhar cupons
+                            exclusivos?</h5>
+                        <p class="card-text">Assine a nossa newsletter e receba as novidades em primeira mão além de
+                            ganhar cupons de desconto exclusivos.</p>
+                    </div>
+                    <div class="row justify-content-center">
+                        <form class="row row-cols-lg-auto g-3 align-items-center">
+                            <div class="col-10">
+                                <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
+                                <div class="input-group">
+                                    <input type="email" class="form-control" id="inlineFormInputGroupUsername"
+                                        placeholder="email@email.com">
+                                </div>
+                            </div>
+
+                            <div class="col-2">
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
     <footer>
         <div class="container-sm pt-3">
