refactor: Alterado a imagem do formulário e incluído o nome do campo input.

--- a/index-elaine.html
+++ b/index-elaine.html
@@ -15,7 +15,7 @@
         <section class="container-sm formulario">
             <div class="row text-center align-items-center">
                 <div class="col-md-6">
-                    <img class="img-fluid" src="./assets/img/delivery-form.jpg"
+                    <img class="img-fluid" src="./assets/img/delivery-form.png"
                         alt="Entregador de alimento entregando pedido.">
                 </div>
                 <div class="col">
@@ -30,8 +30,8 @@
                             <div class="col-10">
                                 <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
                                 <div class="input-group">
-                                    <input type="email" class="form-control" id="inlineFormInputGroupUsername"
-                                        placeholder="email@email.com">
+                                    <input type="email" name="email" class="form-control"
+                                        id="inlineFormInputGroupUsername" placeholder="email@email.com">
                                 </div>
                             </div>
 
