--- a/index-douglas.html
+++ b/index-douglas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +13,21 @@
     <header>
         <nav class="navbar">
             <div class="container">
-              <a class="navbar-brand" href="#">
-                <img src="assets/img/logo-ifood-branco.png" alt="" height="50" class="d-inline-block mt-2 mt-2">
-              </a>
+                <a class="navbar-brand" href="#">
+                    <img src="assets/img/logo-ifood-branco.png" alt="" height="50" class="d-inline-block mt-2 mt-2">
+                </a>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <div class="container">
         <div class="row">
-            <div class="col-6"><div class="tres"></div></div>
-            <div class="col-6"><div class="tres"></div></div>
+            <div class="col-6">
+                <div class="tres"></div>
+            </div>
+            <div class="col-6">
+                <div class="tres"></div>
+            </div>
         </div>
     </div>
 
@@ -32,21 +37,41 @@
             <div class="row"> <!--Definir segundo-->
                 <!-- Primeira coluna -->
                 <div class="col-5">
-                    <img src="assets/img/banners/imagem-secao-5.avif" alt="" srcset="">
+                    <img class="img-fluid" src="assets/img/banners/moto-banner.png" alt="" srcset="">
                 </div>
-                
+
                 <!-- Segunda coluna -->
                 <div class="col-7">
-                    <div class="row"></div>
-                    <div class="row"></div>
-                    <div class="row"></div>
+                    <div class="row">FOOD DELIVERY</div>
+                    <div class="row">Melhor Serviço para atender às suas expectativas.</div>
+                    <div class="row"> Apenas se trata de trazer comida de qualidade dos seus restaurantes favoritos.
+                        Trata-se de estabelecer uma conexão. </div>
+                    <div class="row"><button type="button" class="btn btn-primary btn-lg">Saiba Mais</button></div>
                 </div>
+                <!-- Primeira coluna de baixo -->
+                <div class="col-7">
+                    <div class="row">ABOUT US</div>
+                    <div class="row">Dedicado a Proporcionar-lhe Prazer.</div>
+                    <div class="row"> A satisfação do cliente é o processo de superar as expectativas dos clientes
+                        para
+                        construir uma experiência positiva de longo prazo em torno do seu produto ou serviço. </div>
+                    <div class="row"><button type="button" class="btn btn-primary btn-lg">Saiba Mais</button>
+                    </div>
+                </div>
+
+                <!-- Segunda coluna de baixo -->
+                <div class="col-5">
+                    <img class="img-fluid" src="assets/img/banners/banner-entregador-oficial.png " alt="" srcset="">
+                </div>
+
             </div>
         </div>
     </section>
 
 
+
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 </body>
+
 </html>
