--- a/index.html
+++ b/index.html
@@ -400,12 +400,12 @@
                                 ganhar cupons de desconto exclusivos.</p>
                         </div>
                         <div class="row justify-content-center">
-                            <form class="row row-cols-lg-auto g-3 align-items-center">
+                            <form action="http://localhost:3000/registrations" autocomplete="off" method="POST" class="row row-cols-lg-auto g-3 align-items-center">
                                 <div class="col-md-10">
                                     <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
                                     <div class="input-group">
                                         <input type="email" name="email" class="form-control"
-                                            id="inlineFormInputGroupUsername" placeholder="email@email.com">
+                                            id="inlineFormInputGroupUsername" placeholder="email@email.com" required>
                                     </div>
                                 </div>
 
