Código Ajustes finais

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Inicio Header -->
-    <header>
+    <header id="inicio">
         <div class="container">
             <nav class="navbar navbar-expand-lg p-3">
                 <div class="d-flex flex-grow-1">
@@ -46,8 +46,8 @@
                         <hr class="d-md-none text-white-50">
                         <a class="nav-link" aria-current="page" href="#inicio">Início</a>
                         <a class="nav-link" href="#cardapio">Cardápio</a>
-                        <a class="nav-link" href="#sobre">Sobre Nós</a>
-                        <a class="nav-link" href="#informacoes">Informações</a>
+                        <a class="nav-link" href="#aplicativo">Aplicativo</a>
+                        <a class="nav-link" href="#contatos">Contatos</a>
                     </div>
                 </div>
             </nav>
@@ -157,7 +157,7 @@
         </div>
 
         <!--Cardápio-->
-        <div class="container">
+        <div class="container" id="cardapio">
             <div class="row g-5">
                 <div class="col-md-8">
                     <h3 class="pb-4 pt-5 mb-4 border-bottom text-center">
@@ -336,7 +336,7 @@
                     </div>
 
                     <!-- Segunda coluna -->
-                    <div class="col-md-7">
+                    <div class="col-md-7" id="aplicativo">
                         <div class="row">
                             <p class="descricao-section">FOOD DELIVERY</p>
                         </div>
@@ -386,7 +386,7 @@
 
         <!-- Elaine -->
         <div class="container-preto pb-5">
-            <section class="container-sm formulario">
+            <section class="container-sm formulario" id="contatos">
                 <div class="row text-center align-items-center">
                     <div class="col-md-6">
                         <img class="img-fluid" src="./assets/img/delivery-form.png"
@@ -445,8 +445,8 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item"><a class="nav-rodape" href="#inicio">Início</a></li>
                             <li class="list-group-item"><a class="nav-rodape" href="#cardapio">Cardápio</a></li>
-                            <li class="list-group-item"><a class="nav-rodape" href="#sobre">Sobre Nós</a></li>
-                            <li class="list-group-item"><a class="nav-rodape" href="#info">Informações</a></li>
+                            <li class="list-group-item"><a class="nav-rodape" href="#aplicativo">Aplicativo</a></li>
+                            <li class="list-group-item"><a class="nav-rodape" href="#contato">Contato</a></li>
                             <li class="list-group-item"><a class="nav-rodape" href="#newsletter">Newsletter</a></li>
                         </ul>
                     </div>
